--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,11 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="https://d14n4fsapeewqj.cloudfront.net/temp/bbilogo.webp" />
+  <link rel="icon" href="https://d14n4fsapeewqj.cloudfront.net/temp/bbifavicon.webp" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="Building Bible Intellect" content="" />
-  <link rel="apple-touch-icon" href="https://d14n4fsapeewqj.cloudfront.net/temp/bbilogo.webp" />
-  <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+  <link rel="apple-touch-icon" href="https://d14n4fsapeewqj.cloudfront.net/temp/bbifavicon.webp" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
